--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -25,8 +25,6 @@ nlu:
 - intent: write
   examples: |
     - 请写入信息
-    - 写入我的问题
-    - 这是我的问题
 - intent: goodbye
   examples: |
     - cu
@@ -451,7 +449,7 @@ nlu:
     - [入组]{"entity": "main", "value": "\u5165\u9009\u6807\u51c6"}要求的[预筛选](sub)
     - [入组]{"entity": "main", "value": "\u5165\u9009\u6807\u51c6"}的[预筛选](sub)要求
     - 试验的[预筛选](sub)流程
-    - 受试者[类型](sub)选择中，是否有特殊要求
+    - [受试者类型](sub)选择中，是否有特殊要求
     - [皮肤病](sub)
     - [皮肤病](sub)的[排除]{"entity": "main", "value": "\u6392\u9664\u6807\u51c6"}
     - [怀孕](sub)患者，可以[入]{"entity": "main", "value": "\u5165\u9009\u6807\u51c6"}吗
@@ -613,7 +611,7 @@ nlu:
     - [疫苗](sub)[疫苗](sub)[疫苗](sub)
     - [男性](sub)受试者的[年龄](sub)要求
     - 多大[年龄](sub)可以[入组]{"entity": "main", "value": "\u5165\u9009\u6807\u51c6"}
-    - 有男女性别的限制吗
+    - 有男女[性别](sub)限制吗
     - 受试者[入组](main)的[年龄](sub)要求
     - 入组的[年龄](sub)
     - [COPD](sub)患者可以[入]{"entity": "main", "value": "\u5165\u9009\u6807\u51c6"}吗
@@ -651,6 +649,10 @@ nlu:
     - 同时[参加]{"entity": "main", "value": "\u5165\u9009\u6807\u51c6"}另一项[临床研究](sub)可以吗
     - 参与另一项[临床研究]{"entity": "sub", "value": "\u4e34\u5e8a\u8bd5\u9a8c"}，可以[入]{"entity": "main", "value": "\u5165\u9009\u6807\u51c6"}吗
     - [nsclc](sub)[标准](main)
+    - 患者无法提供15张[病理切片](sub)怎么办
+    - 对[切片](sub)的要求
+    - [kras突变](sub)患者是否可以参加这个试验
+    - [kras突变](sub)患者能否适用于排除标准2
 - intent: thanks
   examples: |
     - 谢谢你
@@ -737,11 +739,6 @@ nlu:
     - [卫平](PERSON)
     - 你可以叫我[卫平](PERSON)
     - 我是[军辉](sub)
-    - 不用了
-    - 就直接问了
-    - 不太方便
-    - 我想直接问问题
-    - [Kenny](PERSON)
 - intent: stop
   examples: |
     - 我不想问了
@@ -766,6 +763,7 @@ nlu:
     - 请问方案的内容
     - 想了解方案
     - 这是个什么方案
+    - 问题
 - intent: target_group
   examples: |
     - 这个方案的基本情况
@@ -784,11 +782,9 @@ nlu:
     - 儿童可以[入组]{"entity": "main", "value": "\u5165\u9009\u6807\u51c6"}吗
     - [15](AGE)岁可以[入组](main)吗
     - [16](AGE)岁可以入组吗
-    - 有男友性别的限制吗
     - 20岁可以[入组]{"entity": "main", "value": "\u5165\u9009\u6807\u51c6"}吗？
     - 90岁还可以吗？
     - 90可以吗
-    - 有男女性别限制吗
     - 34岁可以吗
 - intent: treatment_history
   examples: |
@@ -810,9 +806,26 @@ nlu:
     - C1D1都要做哪些检查
     - Hi Siri，如果受试者有第一周期第一天研究干预给药前3天内正常的12导联ECG检查结果的话，那么第一周期第一天研究
     - Hi Siri，SOA 脚注j中描述“将在筛选期进行三次ECG检查，如果后续ECG检测到异常也进行三次检查”，请问这句话中提到的“三次ECG检查”每次检查时间间隔约多少分钟？
+    - 请问SOA中"乙型肝炎/丙型肝炎血清学检查"角标q“丙型肝炎抗体呈阳性的受试者中，仅聚合酶链反应显示HCV RNA呈阴性的受试者有资格入组研究。“那么如果出现乙肝抗体阳性如何处理？
+    - Hi, SOA中SpO2，要求“第1周期第1天前3天内以及干预期每次给药前后”，请问是否有时间窗口？例如给药前3天内，给药后1小时内？
+    - Hi，请问合并治疗的收集终点时间是什么？
+    - 受试者在筛选期我需要安排患者做哪些检查？
+    - 受试者在筛选期各项检查时间窗？
+    - 受试者C1用药需采那些血样？
+    - 受试者C3访视都需要填写哪些问卷？
+    - 受试者C3访视是否需要肿评？
+    - 受试者出现骨髓抑制3级是否可以正常用药？
+    - 受试者今天进行C3，下一次来院访视时间窗口期在哪天？
+    - AE/CM需要收集到受试者出组后多久？
     - Hi Siri，什么是纵向血液[样本]{"entity": "sub", "value": "\u80bf\u7624\u6837\u672c"}
     - 患者吸烟6年可以入组嘛
     - 患有慢性支气管疾病需要间歇使用支气管扩张剂沙丁胺醇的患者可以入组嘛
+    - EOT如果[和](main)安全性访视时间[重合](sub)或者日期非常接近，是否可以合并
+    - HI SIRI，什么是纵向血液[样本]{"entity": "sub", "value": "\u80bf\u7624\u6837\u672c"}
+    - 患者问卷在访视中的先后顺序
+    - 受试者在筛选[期](sub)我需要安排患者做哪些检查？
+    - 受试者在筛选[期](sub)各项检查时间窗？
+    - 受试者C11用药需采那些血样？
 - synonym: 入选标准
   examples: |
     - 入组
@@ -836,7 +849,6 @@ nlu:
     - 肿瘤标本
     - 样本
     - 标本
-    - 切片
 - synonym: 病灶
   examples: |
     - 靶病灶
@@ -894,6 +906,9 @@ nlu:
     - 临床研究
     - 研究者发起的研究
     - IIT研究
+- synonym: 病理切片
+  examples: |
+    - 切片
 - synonym: 鳞癌
   examples: |
     - 非鳞状
@@ -1042,6 +1057,7 @@ nlu:
     - 研究人群
     - 人群
     - 什么样的患者
+    - 受试者类型
 - synonym: CrCL
   examples: |
     - 肌酐清除率
