--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ chats_analsysi/chats_log.pdf
 chats_analysis/new_all.csv
 chats_analysis/entity_csp.csv
 chats_analysis/entity_csp.pdf
+chats_analysis/chats_df.csv
+chats_analysis/chats_log.csv
+chats_analsysis/converted_log.csv
+chats_analsysi/error_inquiry.csv
+chats_analsysis/t_remind.csv
