--- a/data/stories.yml
+++ b/data/stories.yml
@@ -4,6 +4,7 @@ stories:
   steps:
   - intent: greet
   - action: utter_protocol
+  - action: utter_protocol1
   - action: action_Login
   - slot_was_set:
     - sender_id: '123465'
