--- a/data/rules.yml
+++ b/data/rules.yml
@@ -6,6 +6,7 @@ rules:
     - intent: greet
     - intent: login
   - action: utter_protocol
+  - action: utter_protocol1
   - action: action_Login
 
 - rule: Say goodbye anytime the user says goodbye
