--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -655,6 +655,18 @@ nlu:
     - [kras突变](sub)患者能否适用于排除标准2
     - [穿刺](sub)
     - 试验的[研究人群]{"entity": "sub", "value": "\u76ee\u6807\u4eba\u7fa4"}
+    - [版本](sub)
+    - [靶向药物和小分子（如5-氟尿嘧啶类药物、亚叶酸类药物、每周给予紫杉醇）](sub)      # ready
+    - [其他解剖区域的姑息性立体定向放射治疗（CNS放疗除外，见排除标准4）](sub)
+    - [放射治疗，包括胸部姑息性立体定向放射治疗](sub)       # ready
+    - [重大手术（由研究者确定）](sub)
+    - [靶向药物和小分子（如 5-氟尿嘧啶类药物、亚叶酸类药物、每周给予紫杉醇）](sub)
+    - [批准用于 NSCLC 治疗的 TKI](sub)
+    - 亚硝基脲类或丝裂霉素C
+    - [基于抗体的抗癌治疗](sub)
+    - [氯喹/羟氯喹](sub)
+    - [胸腔积液、腹水或心包积液需要无细胞和CART，腹腔分流或引流治疗](sub)
+    - [受试者类型](sub)和[疾病特征]{"entity": "sub", "value": "\u80ba\u764c"}
 - intent: thanks
   examples: |
     - 谢谢你
